cg_cfg/OpenSSL/7f0a8dc/bug_trace/traces/bug_21.txt
/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/rc2/rc2_cbc.c:48: error: DEAD_STORE
  The value written to &out (type unsigned char*) is never used.
Showing all 1 steps of the trace


/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/rc2/rc2_cbc.c:48:13: Write of unused value
46.               l2c(tout0, out);
47.               tout1 = tin[1];
48.               l2c(tout1, out);
                  ^
49.           }
50.           l2c(tout0, iv);
